src/Editor/Ghost.DSL/ShaderParser/Generated/GhostShaderParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/GhostShaderParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GhostShaderParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHADER=1, COMPUTE=2, PIPELINE=3, PASS=4, DEFINES=5, INCLUDES=6, PROPERTIES=7, 
		PAYLOAD=8, HLSL=9, SM=10, LBRACE=11, RBRACE=12, LPAREN=13, RPAREN=14, 
		LBRACK=15, RBRACK=16, SEMICOLON=17, COMMA=18, EQUALS=19, COLON=20, STRING_LITERAL=21, 
		NUMBER=22, IDENTIFIER=23, WS=24, LINE_COMMENT=25, BLOCK_COMMENT=26, ANY_CHAR=27;
	public const int
		RULE_shaderFile = 0, RULE_shader = 1, RULE_shaderBody = 2, RULE_shaderModel = 3, 
		RULE_propertiesBlock = 4, RULE_propertyStatement = 5, RULE_propertyDefaultValue = 6, 
		RULE_propertyDefaultArguments = 7, RULE_propertyDefaultArgument = 8, RULE_payloadBlock = 9, 
		RULE_payloadBody = 10, RULE_pipelineBlock = 11, RULE_pipelineStatement = 12, 
		RULE_passBlock = 13, RULE_passBody = 14, RULE_definesBlock = 15, RULE_defineStatement = 16, 
		RULE_includesBlock = 17, RULE_includeStatement = 18, RULE_hlslBlock = 19, 
		RULE_hlslBody = 20, RULE_shaderEntry = 21, RULE_functionCall = 22, RULE_functionArguments = 23, 
		RULE_functionArgument = 24;
	public static readonly string[] ruleNames = {
		"shaderFile", "shader", "shaderBody", "shaderModel", "propertiesBlock", 
		"propertyStatement", "propertyDefaultValue", "propertyDefaultArguments", 
		"propertyDefaultArgument", "payloadBlock", "payloadBody", "pipelineBlock", 
		"pipelineStatement", "passBlock", "passBody", "definesBlock", "defineStatement", 
		"includesBlock", "includeStatement", "hlslBlock", "hlslBody", "shaderEntry", 
		"functionCall", "functionArguments", "functionArgument"
	};

	private static readonly string[] _LiteralNames = {
		null, "'shader'", "'compute'", "'pipeline'", "'pass'", "'defines'", "'includes'", 
		"'properties'", "'payload'", "'hlsl'", "'sm'", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "';'", "','", "'='", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHADER", "COMPUTE", "PIPELINE", "PASS", "DEFINES", "INCLUDES", 
		"PROPERTIES", "PAYLOAD", "HLSL", "SM", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "SEMICOLON", "COMMA", "EQUALS", "COLON", "STRING_LITERAL", 
		"NUMBER", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "ANY_CHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GhostShaderParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GhostShaderParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GhostShaderParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GhostShaderParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShaderFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GhostShaderParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShaderContext[] shader() {
			return GetRuleContexts<ShaderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShaderContext shader(int i) {
			return GetRuleContext<ShaderContext>(i);
		}
		public ShaderFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderFileContext shaderFile() {
		ShaderFileContext _localctx = new ShaderFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_shaderFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 50;
				shader();
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==SHADER );
			State = 55;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHADER() { return GetToken(GhostShaderParser.SHADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING_LITERAL() { return GetTokens(GhostShaderParser.STRING_LITERAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL(int i) {
			return GetToken(GhostShaderParser.STRING_LITERAL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShaderBodyContext shaderBody() {
			return GetRuleContext<ShaderBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostShaderParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(GhostShaderParser.COLON, 0); }
		public ShaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderContext shader() {
		ShaderContext _localctx = new ShaderContext(Context, State);
		EnterRule(_localctx, 2, RULE_shader);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			Match(SHADER);
			State = 58;
			Match(STRING_LITERAL);
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 59;
				Match(COLON);
				State = 60;
				Match(STRING_LITERAL);
				}
			}

			State = 63;
			Match(LBRACE);
			State = 64;
			shaderBody();
			State = 65;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShaderModelContext shaderModel() {
			return GetRuleContext<ShaderModelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext[] propertiesBlock() {
			return GetRuleContexts<PropertiesBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesBlockContext propertiesBlock(int i) {
			return GetRuleContext<PropertiesBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PayloadBlockContext[] payloadBlock() {
			return GetRuleContexts<PayloadBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PayloadBlockContext payloadBlock(int i) {
			return GetRuleContext<PayloadBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludesBlockContext[] includesBlock() {
			return GetRuleContexts<IncludesBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludesBlockContext includesBlock(int i) {
			return GetRuleContext<IncludesBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineBlockContext[] pipelineBlock() {
			return GetRuleContexts<PipelineBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineBlockContext pipelineBlock(int i) {
			return GetRuleContext<PipelineBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslBlockContext[] hlslBlock() {
			return GetRuleContexts<HlslBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslBlockContext hlslBlock(int i) {
			return GetRuleContext<HlslBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassBlockContext[] passBlock() {
			return GetRuleContexts<PassBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassBlockContext passBlock(int i) {
			return GetRuleContext<PassBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext[] functionCall() {
			return GetRuleContexts<FunctionCallContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall(int i) {
			return GetRuleContext<FunctionCallContext>(i);
		}
		public ShaderBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderBodyContext shaderBody() {
		ShaderBodyContext _localctx = new ShaderBodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_shaderBody);
		int _la;
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				shaderModel();
				}
				break;
			case PIPELINE:
			case PASS:
			case INCLUDES:
			case PROPERTIES:
			case PAYLOAD:
			case HLSL:
			case RBRACE:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8389592L) != 0)) {
					{
					State = 75;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case PROPERTIES:
						{
						State = 68;
						propertiesBlock();
						}
						break;
					case PAYLOAD:
						{
						State = 69;
						payloadBlock();
						}
						break;
					case INCLUDES:
						{
						State = 70;
						includesBlock();
						}
						break;
					case PIPELINE:
						{
						State = 71;
						pipelineBlock();
						}
						break;
					case HLSL:
						{
						State = 72;
						hlslBlock();
						}
						break;
					case PASS:
						{
						State = 73;
						passBlock();
						}
						break;
					case IDENTIFIER:
						{
						State = 74;
						functionCall();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 79;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderModelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SM() { return GetToken(GhostShaderParser.SM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GhostShaderParser.SEMICOLON, 0); }
		public ShaderModelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderModel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderModel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderModelContext shaderModel() {
		ShaderModelContext _localctx = new ShaderModelContext(Context, State);
		EnterRule(_localctx, 6, RULE_shaderModel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(SM);
			State = 83;
			Match(IDENTIFIER);
			State = 84;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROPERTIES() { return GetToken(GhostShaderParser.PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostShaderParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyStatementContext[] propertyStatement() {
			return GetRuleContexts<PropertyStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyStatementContext propertyStatement(int i) {
			return GetRuleContext<PropertyStatementContext>(i);
		}
		public PropertiesBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertiesBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertiesBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesBlockContext propertiesBlock() {
		PropertiesBlockContext _localctx = new PropertiesBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_propertiesBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(PROPERTIES);
			State = 87;
			Match(LBRACE);
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 88;
				propertyStatement();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 94;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(GhostShaderParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GhostShaderParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(GhostShaderParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(GhostShaderParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultValueContext propertyDefaultValue() {
			return GetRuleContext<PropertyDefaultValueContext>(0);
		}
		public PropertyStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyStatementContext propertyStatement() {
		PropertyStatementContext _localctx = new PropertyStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_propertyStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(IDENTIFIER);
			State = 97;
			Match(IDENTIFIER);
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQUALS) {
				{
				State = 98;
				Match(EQUALS);
				State = 99;
				propertyDefaultValue();
				}
			}

			State = 102;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GhostShaderParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GhostShaderParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentsContext propertyDefaultArguments() {
			return GetRuleContext<PropertyDefaultArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(GhostShaderParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GhostShaderParser.STRING_LITERAL, 0); }
		public PropertyDefaultValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultValueContext propertyDefaultValue() {
		PropertyDefaultValueContext _localctx = new PropertyDefaultValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_propertyDefaultValue);
		int _la;
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104;
				Match(IDENTIFIER);
				State = 105;
				Match(LPAREN);
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) {
					{
					State = 106;
					propertyDefaultArguments();
					}
				}

				State = 109;
				Match(RPAREN);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 110;
				Match(NUMBER);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 111;
				Match(STRING_LITERAL);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 112;
				Match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultArgumentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentContext[] propertyDefaultArgument() {
			return GetRuleContexts<PropertyDefaultArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyDefaultArgumentContext propertyDefaultArgument(int i) {
			return GetRuleContext<PropertyDefaultArgumentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(GhostShaderParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(GhostShaderParser.COMMA, i);
		}
		public PropertyDefaultArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultArguments; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultArgumentsContext propertyDefaultArguments() {
		PropertyDefaultArgumentsContext _localctx = new PropertyDefaultArgumentsContext(Context, State);
		EnterRule(_localctx, 14, RULE_propertyDefaultArguments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			propertyDefaultArgument();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 116;
				Match(COMMA);
				State = 117;
				propertyDefaultArgument();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefaultArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(GhostShaderParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GhostShaderParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(GhostShaderParser.STRING_LITERAL, 0); }
		public PropertyDefaultArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefaultArgument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefaultArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefaultArgumentContext propertyDefaultArgument() {
		PropertyDefaultArgumentContext _localctx = new PropertyDefaultArgumentContext(Context, State);
		EnterRule(_localctx, 16, RULE_propertyDefaultArgument);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PayloadBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PAYLOAD() { return GetToken(GhostShaderParser.PAYLOAD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GhostShaderParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PayloadBodyContext payloadBody() {
			return GetRuleContext<PayloadBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GhostShaderParser.RBRACE, 0); }
		public PayloadBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_payloadBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGhostShaderParserVisitor<TResult> typedVisitor = visitor as IGhostShaderParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPayloadBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PayloadBlockContext payloadBlock() {
		PayloadBlockContext _localctx = new PayloadBlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_payloadBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(PAYLOAD);
			State = 126;
			Match(LBRACE);
			State = 127;
			payloadBody();
			State = 128;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
